RESOLVED FIXED218961
Fix for infinite recursion crash in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=218961
Summary Fix for infinite recursion crash in isolated tree mode.
Andres Gonzalez
Reported 2020-11-15 10:22:48 PST
Fix for infinite recursion crash in isolated tree mode.
Attachments
Patch (2.15 KB, patch)
2020-11-15 10:38 PST, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-11-15 10:38:40 PST
EWS
Comment 2 2020-11-15 13:03:55 PST
Committed r269833: <https://trac.webkit.org/changeset/269833> All reviewed patches have been landed. Closing bug and clearing flags on attachment 414171 [details].
Radar WebKit Bug Importer
Comment 3 2020-11-15 13:04:16 PST
Note You need to log in before you can comment on or make changes to this bug.