Fix for infinite recursion crash in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=218961

Reviewed by Chris Fleizach.

Covered by existing tests.

[WebAccessibilityObjectWrapper attachmentView] can cause the
initialization of a new AXIsolatedObject which in turn can invoke
indirectly AccessibilityObject::accessibilityIgnoreAttachment, thus
creating an infinite recursion. This change avoids this problem and
makes this method more efficient even in those cases where there was no
infinite recursion.

* accessibility/mac/AccessibilityObjectMac.mm:
(WebCore::AccessibilityObject::accessibilityIgnoreAttachment const):


Canonical link: https://commits.webkit.org/231598@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269833 268f45cc-cd09-0410-ab3c-d52691b4dbfc